--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   # Local Storage
   shared_preferences: ^2.3.2
   path_provider: ^2.1.4
+  flutter_secure_storage: ^9.2.2
   
   # Animations
   animated_text_kit: ^4.2.2
