dialed in layout. debug lines on.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,10 @@ dependencies:
   
   # Animations
   animated_text_kit: ^4.2.2
-  
+
+  # 3D Carousel
+  flutter_3d_carousel: ^2.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
