--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   path_provider: ^2.1.4
   flutter_secure_storage: ^9.2.2
 
+  # UUID Generation
+  uuid: ^4.5.1
+
+  # URL Launcher
+  url_launcher: ^6.2.5
+
   # Spell Check
   spell_check_on_client: ^1.0.0
   
