--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.11
   flutter_native_splash: ^2.3.10
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -110,6 +111,12 @@ flutter:
     - family: IcoMoon
       fonts:
         - asset: assets/icons/icomoon.ttf
+
+# App launcher icon configuration
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/infiniteer_app_logo.png"
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
